--- a/tank1.html
+++ b/tank1.html
@@ -86,6 +86,13 @@
                 </div>
             </div>
         </main>
+        <footer class="main-footer">
+        <p class="footer-title">Developed by <strong>Weerapat Charoenwan & Team</strong></p>
+        <p class="footer-subtitle">AIOT LAB , IOT SYSTEM & INFORMATION, KMITL</p>
+        <div class="footer-badge">
+            <span class="tech-icon">✦</span> Powered by <span>GEMINI PRO</span>
+        </div>
+    </footer>
     </div>
 
     <script src="app.js"></script>
